train and sanity checks

--- a/GPT2_adapter_generation.ipynb
+++ b/GPT2_adapter_generation.ipynb
@@ -11,7 +11,7 @@
     "import numpy as np\n",
     "import torch\n",
     "import torch.nn.functional as F\n",
-    "from transformers import GPT2Tokenizer, TrainingArguments\n",
+    "from transformers import GPT2Tokenizer, TrainingArguments, set_seed\n",
     "from utils.helper import load_model_recursive\n",
     "from ppcm_models.pytorch_pretrained_bert.modeling_adapter import GPT2LMHeadModel, GPT2Config"
    ]
@@ -19,6 +19,17 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "dcafe7cc-e742-4270-bcf8-4b62e6b8ff49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "2dbf6887-a0c8-4ff8-b3e0-d0ff9b659bb5",
    "metadata": {},
    "outputs": [],
@@ -52,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "5dd69338-00ae-4e00-b2ac-1d19e981b9de",
    "metadata": {},
    "outputs": [],
@@ -65,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "608d510c-136b-483a-99e7-511548100827",
    "metadata": {},
    "outputs": [
@@ -73,46 +84,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading finetuned model from ./save/GPT2small_adapterid0_genreAction_matched3_sampleNone_maxseqlen512_bs8_lr5e-05_10.0epoch_wd0.0_ws0/pytorch_model.bin\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/bryan/miniconda3/envs/pix2story/lib/python3.10/site-packages/torch/cuda/__init__.py:145: UserWarning: \n",
-      "GeForce RTX 3090 with CUDA capability sm_86 is not compatible with the current PyTorch installation.\n",
-      "The current PyTorch install supports CUDA capabilities sm_37 sm_50 sm_60 sm_70.\n",
-      "If you want to use the GeForce RTX 3090 GPU with PyTorch, please check the instructions at https://pytorch.org/get-started/locally/\n",
+      "Loading finetuned model from ./save/GPT2small_adapterid0_genreThriller_matched3_sampleNone_maxseqlen512_bs8_lr0.001_10.0epoch_wd0.0_ws0/pytorch_model.bin\n",
+      "Hello, my dog is cute. I'm not sure if he's a good dog, but he is. He's very cute and I think he likes me.\"\"I'm sorry, I don't know. But I can't help it. It's just that I've been so busy. You know, the last time I was here, you were at the hospital. And I didn't want to be there. So I went to the doctor.\"The man in the black suit was<|endoftext|> \n",
       "\n",
-      "  warnings.warn(incompatible_device_warn.format(device_name, capability, \" \".join(arch_list), device_name))\n",
-      "/home/bryan/miniconda3/envs/pix2story/lib/python3.10/site-packages/transformers/generation_beam_search.py:196: UserWarning: Passing `max_length` to BeamSearchScorer is deprecated and has no effect. `max_length` should be passed directly to `beam_search(...)`, `beam_sample(...)`, or `group_beam_search(...)`.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello, my dog is cute. I'm going to take her to the vet. She's a little bit scared. But I'll be okay.\"\"I'm sorry, but I don't know what to do. It's not like I want to be in a relationship with you. You're my best friend, and I love you.\"The man was a man of few words. He was tall, thin, with a thick, dark complexion. His hair was long and flowing. The<|endoftext|> \n",
+      "Loading finetuned model from ./save/GPT2small_adapterid0_genreMystery_matched3_sampleNone_maxseqlen512_bs8_lr0.001_10.0epoch_wd0.0_ws0/pytorch_model.bin\n",
+      "Hello, my dog is cute. I'm not sure if he's a good dog, but he is a very good one. He's very smart and very strong. And he loves me.\"I'm sorry, I don't know. It's just that I was thinking about it. But I didn't want to get into that. You know, it's not like I want you to know anything. Just that you know what I mean.\"\"You're not going to be able<|endoftext|> \n",
       "\n",
-      "Loading finetuned model from ./save/GPT2small_adapterid0_genreAction_matched3_sampleNone_maxseqlen512_bs8_lr5e-05_2.0epoch_wd0.0_ws0/pytorch_model.bin\n",
-      "Hello, my dog is cute. I'm not sure if she's cute or not. But I think she is. She's a little bit cute, but I don't think I can tell you what she looks like.\"I'm sorry, I was just trying to get you to stop talking about me. It's not like I've ever talked to you before. You're a good guy. And I know you're not.\"\"You're right. We're in the middle of<|endoftext|> \n",
-      "\n",
-      "Loading finetuned model from ./save/GPT2small_adapterid0_genreMystery_matched3_sampleNone_maxseqlen512_bs8_lr0.0005_5.0epoch_wd0.0_ws0/pytorch_model.bin\n",
-      "Hello, my dog is cute. I'm not sure if she's a dog or a cat. She's just a little girl. But she loves me. And I love her so much.\"\"I'm sorry, but I don't know what to do. It's not like I want to be here. You know, I've been here a few times. The last time I was here was in the middle of the night. So I can't be there.\"The next morning,<|endoftext|> \n",
-      "\n",
-      "Loading finetuned model from ./save/GPT2small_adapterid0_genreRomance_matched3_sampleNone_maxseqlen512_bs8_lr5e-05_2.0epoch_wd0.0_ws0/pytorch_model.bin\n",
-      "Hello, my dog is cute. I'm not sure if she's a good dog, but she is a very good one. She's very obedient and she loves to be around me.\"\"I'm sorry, I didn't mean to. It's just that I don't want to see you again. You're a little too young to know what I mean.\" He looked at her and then back at me. \"I don' think I can handle it.\"He was a man of<|endoftext|> \n",
-      "\n"
+      "Loading finetuned model from ./save/GPT2small_adapterid0_genreHistorical_matched3_sampleNone_maxseqlen512_bs8_lr0.001_10.0epoch_wd0.0_ws0/pytorch_model.bin\n"
      ]
     }
    ],
    "source": [
-    "model_run_names = ['GPT2small_adapterid0_genreAction_matched3_sampleNone_maxseqlen512_bs8_lr5e-05_10.0epoch_wd0.0_ws0',\n",
-    "                   'GPT2small_adapterid0_genreAction_matched3_sampleNone_maxseqlen512_bs8_lr5e-05_2.0epoch_wd0.0_ws0',\n",
-    "                   'GPT2small_adapterid0_genreMystery_matched3_sampleNone_maxseqlen512_bs8_lr0.0005_5.0epoch_wd0.0_ws0',\n",
-    "                   'GPT2small_adapterid0_genreRomance_matched3_sampleNone_maxseqlen512_bs8_lr5e-05_2.0epoch_wd0.0_ws0']\n",
+    "%%time\n",
+    "model_run_names = ['GPT2small_adapterid0_genreThriller_matched3_sampleNone_maxseqlen512_bs8_lr0.001_10.0epoch_wd0.0_ws0'\n",
+    "                  ,'GPT2small_adapterid0_genreMystery_matched3_sampleNone_maxseqlen512_bs8_lr0.001_10.0epoch_wd0.0_ws0'\n",
+    "                  ,'GPT2small_adapterid0_genreHistorical_matched3_sampleNone_maxseqlen512_bs8_lr0.001_10.0epoch_wd0.0_ws0']\n",
     "\n",
     "for i, model_run_name in enumerate(model_run_names):\n",
     "\n",
@@ -129,7 +115,9 @@
     "    text = \"Hello, my dog is cute\"\n",
     "    generated = tokenizer.encode(text)\n",
     "    context = torch.tensor([generated])\n",
-    "\n",
+    "    \n",
+    "    # Following https://github.com/huggingface/transformers/blob/main/src/transformers/generation_utils.py#L1096-L1100\n",
+    "    torch.manual_seed(14045)\n",
     "    generation = model.generate(inputs=context,\n",
     "                               num_beams=3, \n",
     "                               length_penalty=3, \n",
