update test generation

--- a/GPT2_adapter_generation.ipynb
+++ b/GPT2_adapter_generation.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "608d510c-136b-483a-99e7-511548100827",
    "metadata": {},
    "outputs": [
@@ -90,7 +90,11 @@
       "Loading finetuned model from ./save/GPT2small_adapterid0_genreMystery_matched3_sampleNone_maxseqlen512_bs8_lr0.001_10.0epoch_wd0.0_ws0/pytorch_model.bin\n",
       "Hello, my dog is cute. I'm not sure if he's a good dog, but he is a very good one. He's very smart and very strong. And he loves me.\"I'm sorry, I don't know. It's just that I was thinking about it. But I didn't want to get into that. You know, it's not like I want you to know anything. Just that you know what I mean.\"\"You're not going to be able<|endoftext|> \n",
       "\n",
-      "Loading finetuned model from ./save/GPT2small_adapterid0_genreHistorical_matched3_sampleNone_maxseqlen512_bs8_lr0.001_10.0epoch_wd0.0_ws0/pytorch_model.bin\n"
+      "Loading finetuned model from ./save/GPT2small_adapterid0_genreHistorical_matched3_sampleNone_maxseqlen512_bs8_lr0.001_10.0epoch_wd0.0_ws0/pytorch_model.bin\n",
+      "Hello, my dog is cute. I'm not sure how much I love him. He's a good boy, but he's not very good at keeping his own thoughts to himself. And I don't know how he can be so good with his dogs.\"\"I'm sorry, I was just trying to get you to stop. It's just that I've been in a really bad mood lately. You know, the last time I saw you, you were in the hospital. That's<|endoftext|> \n",
+      "\n",
+      "CPU times: user 3h 36min 52s, sys: 1min 38s, total: 3h 38min 31s\n",
+      "Wall time: 44min 13s\n"
      ]
     }
    ],
